# nim-binding-demo

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  Todo.md  sequenceDiagram.md
bindings/cpp_binding/: CMakeLists.txt
bindings/cpp_binding/cmake/: cpp_bindingConfig.cmake.in
bindings/cpp_binding/include/demolib/: api.hpp  demolib.hpp  event_dispatcher.hpp  event_tag.hpp  expected.hpp
bindings/cpp_binding/src/: event_bridge.cpp
bindings/rust_binding/: CMakeLists.txt  Cargo.toml  build.rs
bindings/rust_binding/src/: api.rs  lib.rs
cpp_generator/: CMakeLists.txt
cpp_generator/src/: nim_api_interface_generator.cpp
demolib/: CMakeLists.txt  demolib.nimble
demolib/src/: api.nim  demolib.h  demolib.nim  event_dispatcher.nim  ffi.nim  message.nim  request_dispatcher.nim  request_item.nim
demolib/src/demolib/: context.nim  message.nim
demolib/tests/: test_all.nim  test_demolib.nim  test_message.nim
docs/: sequence.mmd
examples/cpp_demo/: CMakeLists.txt
examples/cpp_demo/src/: main.cpp
examples/cpp_demo_app/: CMakeLists.txt
examples/cpp_demo_app/src/: main.cpp
examples/cpp_raw_demo/: CMakeLists.txt  README.md
examples/cpp_raw_demo/src/: demolib_api.h  event_dispatcher.h  main.cpp
examples/rust_demo_app/: CMakeLists.txt  Cargo.toml
examples/rust_demo_app/src/: main.rs
libnimdemo/: CMakeLists.txt  libnimdemo.nimble
libnimdemo/src/: api.nim  api_types.nim  event_dispatcher.nim  ffi.nim  libnimdemo.h  libnimdemo.nim  request_dispatcher.nim  request_item.nim  serde.nim  thread_data_exchange.nim
libnimdemo/tests/: nim.cfg  test_message.nim
proto/: api_types.proto  message.proto
